Finally, MultiTask tested and check how to task run on same core:)

--- a/platforms/espressif/esp32/devices/slave/platformio.ini
+++ b/platforms/espressif/esp32/devices/slave/platformio.ini
@@ -9,6 +9,15 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:esp32dev]
-platform = espressif32
-board = esp32dev
+board     = esp32dev
+;
+platform  = espressif32
 framework = arduino
+;
+lib_deps =
+    ../../shared/include
+;
+upload_port = COM5
+;
+monitor_port  = COM5
+monitor_speed = 115200
