IO handlers for pins and multiplexers written BUT only mux_handler was tested and checked as stable!

--- a/platforms/espressif/esp32/devices/slave/platformio.ini
+++ b/platforms/espressif/esp32/devices/slave/platformio.ini
@@ -14,8 +14,8 @@ board     = esp32dev
 platform  = espressif32
 framework = arduino
 ;
-lib_deps =
-    ../../shared/include
+lib_extra_dirs =
+    ../../shared
 ;
 upload_port = COM5
 ;
