--- a/platforms/espressif/esp32/devices/slave/platformio.ini
+++ b/platforms/espressif/esp32/devices/slave/platformio.ini
@@ -14,10 +14,12 @@ board     = esp32dev
 platform  = espressif32
 framework = arduino
 ;
+lib_deps =
+    ../../shared/lib/LoRa
 lib_extra_dirs =
     ../../shared
 ;
-upload_port = COM5
+upload_port = COM11
 ;
-monitor_port  = COM5
+monitor_port  = COM11
 monitor_speed = 115200
