--- a/platforms/espressif/esp32/devices/master/platformio.ini
+++ b/platforms/espressif/esp32/devices/master/platformio.ini
@@ -14,6 +14,8 @@ board     = esp32dev
 platform  = espressif32
 framework = arduino
 ;
+lib_deps =
+    ../../shared/lib/LoRa
 lib_extra_dirs =
     ../../shared
 ;
